infra/k8s/client-depl.yaml
# The Deployment for client
# It has only one pod with one container in it
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: jseow5177/client:latest
---
# The ClusterIP service for client
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000 # The port to reach this service
      targetPort: 3000 # The target port where this service will direct the request to
