infra/k8s/comments-depl.yaml
# The Deployment for Comments Service
# It has only one pod with one container in it
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: jseow5177/comments:latest
---
# The ClusterIP service for Comments Service
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001 # The port to reach this service
      targetPort: 4001 # The target port where this service will direct the request to
