infra/k8s/moderation-depl.yaml
# The Deployment for Moderation Service
# It has only one pod with one container in it
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: jseow5177/moderation:latest
---
# The ClusterIP service for Moderation Service
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003 # The port to reach this service
      targetPort: 4003 # The target port where this service will direct the request to
